# pman

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindClangFormat.cmake
cmake/scripts/: clang-format-check-changed
docs/: pman_cli.md  pman_cli_man.md  pman_design.docx
docs/design/: pman_design.fdb_latexmk  pman_design.tex
docs/design/sections/: architecture.tex  build_tools.tex  detailed_design.tex  introduction.tex  titlepage.tex
docs/uml/: activity_get_db.dia  activity_list_db.dia  activity_login.dia  activity_new_entry.dia
docs/uml/activity_commands/: activity_get_pw.dia  activity_new_entry.dia
docs/uml/activity_common/: activity_prompt_pw.dia
docs/uml/architecture/: deployment_view.dia  logical_view.dia
docs/uml/architecture/activity_commands/: activity_delete_entry.dia  activity_new_db.dia  delete_entry.dia  edit_entry.dia  get_pw.dia  init_db.dia
docs/uml/architecture/activity_common/: prompt_pw.dia
docs/uml/detailed_design/authentication/: authenticate.dia
docs/uml/detailed_design/db_handling/: driver_meta.dia  entry_manage.dia
docs/uml/detailed_design/encrypt/: encrypt.dia
docs/uml/detailed_design/hash/: hash.dia
docs/uml/detailed_design/logging/: logging.dia
docs/uml/detailed_design/options/: options.dia
docs/uml/detailed_design/persistence/: persistence.dia
docs/uml/detailed_design/user_input/: input.dia
include/auth/: auth.h
include/cmd/: cmd.h  drive.h  error.h  impl.h  setup.h  status.h
include/common/: buffer_view.h  constants.h  error_msg.h  file.h  fixed_array.h  info_msg.h  macros.h  memory.h  paths.h  string.h
include/db/: driver.h  master_key.h  metadata.h
include/db/entries/: category.h  entry.h  entry_manage.h
include/encrypt/: algorithm.h  crypt_meta.h
include/encrypt/file/: decrypt.h  encrypt.h
include/encrypt/meta/: crypt.h  iv.h  key.h
include/encrypt/raw/: cipher.h  crypt.h  crypt_block.h  decrypt.h  encrypt.h
include/hash/: hash.h  hasher.h  types.h
include/input/: prompt_dynamic.h  prompt_msgs.h  prompt_static.h  prompt_verify.h  prompt_yn.h  term.h
include/logging/: logger.h  terminal_logger.h
include/options/: options.h  parse.h
include/persistence/: config.h  login_cache.h
scripts/: cl_analyze.sh
src/: CMakeLists.txt  main.c
src/auth/: auth.c
src/cmd/: cmd.c  drive.c  impl.c  setup.c
src/common/: buffer_view.c  constants.c  error_msg.c  error_msg.cpp  file.c  info_msg.c  memory.c  paths.c  string.c
src/db/: driver.c  master_key.c  metadata.c
src/db/entries/: category.c  entry.c  entry_manage.c
src/encrypt/: algorithm.c
src/encrypt/file/: decrypt.c  encrypt.c
src/encrypt/meta/: crypt.c  iv.c  key.c
src/encrypt/raw/: cipher.c  crypt.c  crypt_block.c  crypt_meta.c  decrypt.c  encrypt.c
src/hash/: hash.c  hasher.c
src/input/: prompt.c  prompt_dynamic.c  prompt_msgs.c  prompt_msgs.cpp  prompt_static.c  prompt_verify.c  prompt_yn.cpp  term.c
src/logging/: logger.c  terminal_logger.c
src/options/: options.c  parse.c
src/persistence/: config.c  login_cache.c
tests/: CMakeLists.txt  tests.c
